# cg1920tp

./: .gitignore  .travis.yml  CMakeLists - Cópia.txt  CMakeLists.txt  README.md
Common/: CMakeLists.txt
Common/include/Common/: vectors.h
Common/src/: CMakeLists.txt  vectors.cpp
Configurations/: .gitignore  10  Simple_Model.xml  Sistema_Solar.xml  Solar_System.xml  Solar_System_Rotation.xml  Solar_System_Short.xml  Solar_System_Texture.xml  Solar_System_Translation.xml  box.3d  boxer.3d  cone.3d  esfera.3d  paralelipipedo.3d  phase1.xml  plane.3d  plane_xy.3d  plane_yz.3d  plane_zx.3d  planet.3d  sphere.3d  sun.3d  teapot.3d
Engine/: CMakeLists.txt
Engine/lib/: CMakeLists.txt
Engine/lib/glut/: CMakeLists.txt
Engine/lib/glut/GL/: glut.h
Engine/lib/opengl/: CMakeLists.txt
Engine/lib/tinyxml2/include/tinyxml2/: tinyxml2.h
Engine/lib/tinyxml2/src/: tinyxml2.cpp
Engine/src/: CMakeLists.txt  Model.cpp  Model.h  Scene.cpp  Scene.h  glut.h  main.cpp  window.cpp  window.h
Engine/src/entities/: Entity.h  Group.cpp  Group.h  Model.cpp  Model.h  Models.cpp  Models.h  Rotate.cpp  Rotate.h  Scale.cpp  Scale.h  Translate.cpp  Translate.h
Engine/src/objects/: ModelMesh.cpp  ModelMesh.h  ObjectCache.h  Texture.cpp  Texture.h
Engine/src/scene/: Scene.cpp  Scene.h
Engine/src/scene/entities/: CatmullRomAnimation.cpp  CatmullRomAnimation.h  Entity.h  Group.cpp  Group.h  Model.cpp  Model.h  Models.cpp  Models.h  Rotate.cpp  Rotate.h  Scale.cpp  Scale.h  StaticRotate.cpp  StaticRotate.h  StaticTranslate.cpp  StaticTranslate.h  TimedRotate.cpp  TimedRotate.h  Translate.cpp  Translate.h
Engine/src/scene/lighting/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  Lights.cpp  Lights.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
Engine/src/util/: Settings.cpp  Settings.h
Engine/src/window/: Window.cpp  Window.h
Engine/src/window/cameras/: Camera.h  ExplorerCamera.cpp  ExplorerCamera.h  FpsCamera.cpp  FpsCamera.h  MixedCamera.cpp  MixedCamera.h  StaticCamera.cpp  StaticCamera.h
Engine/src/window/input/: Keyboard.cpp  Keyboard.h
Engine/src/window/viewfrustum/: Plane.h  ViewFrustum.cpp  ViewFrustum.h
Generator/: CMakeLists.txt
Generator/src/: AbstractGenerator.cpp  AbstractGenerator.h  BezierGenerator.cpp  BezierGenerator.h  BoxGenerator.cpp  BoxGenerator.h  CMakeLists.txt  ConeGenerator.cpp  ConeGenerator.h  PlaneGenerator.cpp  PlaneGenerator.h  SphereGenerator.cpp  SphereGenerator.h  main.cpp  old_main.cpp
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glm/: readme.md
lib/tinyxml2/: CMakeLists.txt
lib/tinyxml2/src/: tinyxml2.cpp
